--- a/deliverables/rocky/python-heatclient.yaml
+++ b/deliverables/rocky/python-heatclient.yaml
@@ -4,5 +4,10 @@ launchpad: python-heatclient
 release-model: cycle-with-intermediary
 team: heat
 type: client-library
+releases:
+  - version: 1.15.0
+    projects:
+      - repo: openstack/python-heatclient
+        hash: aab5b85811c4a23dc0b66e27c771a59a91a2bec0
 repository-settings:
   openstack/python-heatclient: {}
