--- a/deliverables/rocky/puppet-rally.yaml
+++ b/deliverables/rocky/puppet-rally.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-rally: {}
+releases:
+  - projects:
+      - hash: b720c0f6230bd2c7475016eee850aa43ecc766b5
+        repo: openstack/puppet-rally
+    version: 1.0.0
