--- a/deliverables/rocky/puppet-cloudkitty.yaml
+++ b/deliverables/rocky/puppet-cloudkitty.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-cloudkitty: {}
+releases:
+  - projects:
+      - hash: 71c55bd26c3cdd87ec2cb89ba6eca06004df6f60
+        repo: openstack/puppet-cloudkitty
+    version: 2.0.0
