--- a/deliverables/rocky/puppet-congress.yaml
+++ b/deliverables/rocky/puppet-congress.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-congress: {}
+releases:
+  - projects:
+      - hash: 06abca1acb76b9b44fa21a672c3f7e93855bb30e
+        repo: openstack/puppet-congress
+    version: 13.0.0
