--- a/deliverables/rocky/puppet-ec2api.yaml
+++ b/deliverables/rocky/puppet-ec2api.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-ec2api: {}
+releases:
+  - projects:
+      - hash: 4e11ddb786dfdbdee6e04bf388e556f64ea55687
+        repo: openstack/puppet-ec2api
+    version: 13.0.0
