--- a/deliverables/rocky/puppet-freezer.yaml
+++ b/deliverables/rocky/puppet-freezer.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-freezer: {}
+releases:
+  - projects:
+      - hash: e012cff1053b31c44b5857bfda0d65719011ef24
+        repo: openstack/puppet-freezer
+    version: 2.0.0
