--- a/deliverables/rocky/puppet-heat.yaml
+++ b/deliverables/rocky/puppet-heat.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-heat: {}
+releases:
+  - projects:
+      - hash: 16d44bc37f9cf837a3f89d94d1699507263ef068
+        repo: openstack/puppet-heat
+    version: 13.0.0
