--- a/deliverables/rocky/puppet-manila.yaml
+++ b/deliverables/rocky/puppet-manila.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-manila: {}
+releases:
+  - projects:
+      - hash: ca1671c9e4e426b45a48adcc8701dc0dac675a5b
+        repo: openstack/puppet-manila
+    version: 13.0.0
