--- a/deliverables/rocky/puppet-openstack_extras.yaml
+++ b/deliverables/rocky/puppet-openstack_extras.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-openstack_extras: {}
+releases:
+  - projects:
+      - hash: 34f63a7d73c1d7d7e7df4c79a4ad6c4a4d1b142e
+        repo: openstack/puppet-openstack_extras
+    version: 13.0.0
