--- a/deliverables/rocky/puppet-ovn.yaml
+++ b/deliverables/rocky/puppet-ovn.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-ovn: {}
+releases:
+  - projects:
+      - hash: 7c0f9ff291f0fbb30a18be8894a5f4d7167e006c
+        repo: openstack/puppet-ovn
+    version: 13.0.0
