--- a/deliverables/rocky/designate.yaml
+++ b/deliverables/rocky/designate.yaml
@@ -7,3 +7,8 @@ team: designate
 type: service
 repository-settings:
   openstack/designate: {}
+releases:
+  - projects:
+      - hash: af6a4cf3a8060732df5f4e06c3b7434c7ea542c9
+        repo: openstack/designate
+    version: 7.0.0.0b1
