osc-placement: release 1.1.0 for rocky
Change-Id: Icd425d1208c5d99f18cc4acfe993e13d37630d01

--- a/deliverables/rocky/osc-placement.yaml
+++ b/deliverables/rocky/osc-placement.yaml
@@ -6,3 +6,8 @@ team: nova
 type: library
 repository-settings:
   openstack/osc-placement: {}
+releases:
+  - version: 1.1.0
+    projects:
+      - repo: openstack/osc-placement
+        hash: 844414861a90e251cc4f61ee6908009130284353
