rocky: release python-novaclient 10.2.0
Depends-On: https://review.openstack.org/424256

Change-Id: Ibeee0a16f2c5ced3a81faaa09b34961572116360

--- a/deliverables/rocky/python-novaclient.yaml
+++ b/deliverables/rocky/python-novaclient.yaml
@@ -6,3 +6,8 @@ team: nova
 type: client-library
 repository-settings:
   openstack/python-novaclient: {}
+releases:
+  - version: 10.2.0
+    projects:
+      - repo: openstack/python-novaclient
+        hash: 6049be67c0f66bd2d15c7b52f77dd89ac4ec2e94
