--- a/deliverables/pike/python-novaclient.yaml
+++ b/deliverables/pike/python-novaclient.yaml
@@ -27,6 +27,10 @@ releases:
     projects:
       - hash: a1c00740c5b709a7d2bc4289fa6e28eac7909b8f
         repo: openstack/python-novaclient
+  - version: 9.1.2
+    projects:
+      - hash: e573b6f11ea370fd96654d9a97df1b5495c5e842
+        repo: openstack/python-novaclient
 team: nova
 type: library
 repository-settings:
