os-traits: rocky release 0.6.0
Change-Id: If9bc2ec202a98cecb8bedce99203ab3b2ca6ef5c

--- a/deliverables/rocky/os-traits.yaml
+++ b/deliverables/rocky/os-traits.yaml
@@ -4,5 +4,11 @@ team: nova
 type: library
 release-model: cycle-with-intermediary
 include-pypi-link: yes
+release-notes: https://docs.openstack.org/releasenotes/os-traits/unreleased.html
 repository-settings:
   openstack/os-traits: {}
+releases:
+  - version: 0.6.0
+    projects:
+      - repo: openstack/os-traits
+        hash: 16e87f2ea00e7a9410884b4ab4c1e5df2e66a6d8
