--- a/deliverables/rocky/qinling.yaml
+++ b/deliverables/rocky/qinling.yaml
@@ -5,3 +5,8 @@ storyboard: 927
 release-model: cycle-with-milestones
 repository-settings:
   openstack/qinling: {}
+releases:
+  - version: 1.0.0.0b1
+    projects:
+      - repo: openstack/qinling
+        hash: 917132a19cd58b3151d6f30839eb327a26459117
