nova: release pike 16.1.2
Depends-On: https://review.openstack.org/560690

Change-Id: Ie03aac3ba0716e9b8f10244db707dc13f1a1803f

--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -57,5 +57,9 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 708342fe8d6e930d7fe942fb5f2043c2907cd5e9
+  - version: 16.1.2
+    projects:
+      - repo: openstack/nova
+        hash: 09593628fda7a6cb947fff34c725e3ef29889dc7
 repository-settings:
   openstack/nova: {}
