nova: release rocky 18.0.0.0b1
This is the r-1 milestone release for nova.

Depends-On: https://review.openstack.org/555861
Depends-On: https://review.openstack.org/560674

Change-Id: Id8e9930e573c29ee51647ceb462a0c61abc521a9

--- a/deliverables/rocky/nova.yaml
+++ b/deliverables/rocky/nova.yaml
@@ -3,5 +3,11 @@ launchpad: nova
 release-model: cycle-with-milestones
 team: nova
 type: service
+release-notes: https://docs.openstack.org/releasenotes/nova/unreleased.html
 repository-settings:
   openstack/nova: {}
+releases:
+  - version: 18.0.0.0b1
+    projects:
+      - repo: openstack/nova
+        hash: 8a407bd288bb3116e50ea3b29a125caa036204cb
