--- a/deliverables/rocky/murano-dashboard.yaml
+++ b/deliverables/rocky/murano-dashboard.yaml
@@ -1,8 +1,13 @@
 ---
 launchpad: murano
 release-model: cycle-with-milestones
-release-type: python-pypi
+release-type: horizon
 team: murano
 type: horizon-plugin
+releases:
+  - version: 6.0.0.0b1
+    projects:
+      - repo: openstack/murano-dashboard
+        hash: 4dea57101471d69ba8a6abb6f516917d01cf09dc
 repository-settings:
   openstack/murano-dashboard: {}
