--- a/deliverables/rocky/monasca-ceilometer.yaml
+++ b/deliverables/rocky/monasca-ceilometer.yaml
@@ -6,3 +6,8 @@ team: monasca
 type: other
 repository-settings:
   openstack/monasca-ceilometer: {}
+releases:
+  - projects:
+      - hash: 24c468ee2257a7d2d0772a2e8bd999bb37fcf687
+        repo: openstack/monasca-ceilometer
+    version: 1.8.0
