--- a/deliverables/rocky/monasca-transform.yaml
+++ b/deliverables/rocky/monasca-transform.yaml
@@ -6,3 +6,8 @@ team: monasca
 type: other
 repository-settings:
   openstack/monasca-transform: {}
+releases:
+  - projects:
+      - hash: 395a3237f59bb79de040ccb658edf223d3411fb2
+        repo: openstack/monasca-transform
+    version: 0.15.0
