--- a/deliverables/rocky/mistral-lib.yaml
+++ b/deliverables/rocky/mistral-lib.yaml
@@ -6,3 +6,8 @@ team: mistral
 type: library
 repository-settings:
   openstack/mistral-lib: {}
+releases:
+  - projects:
+      - hash: ef3482eace42f6914c0c37941d4626784c3715ec
+        repo: openstack/mistral-lib
+    version: 0.5.0
