fix the python-masakariclient release model
We do not allow libraries to follow the milestone release model because
pip will not install pre-release versions by default.

Also correct the deliverable type at the same time.

Change-Id: Ia638fccff9fb9ed9cacaf3ef854a1f0e11fb6d43
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/rocky/python-masakariclient.yaml
+++ b/deliverables/rocky/python-masakariclient.yaml
@@ -1,7 +1,7 @@
 ---
 launchpad: python-masakariclient
-release-model: cycle-with-milestones
+release-model: cycle-with-intermediary
 team: masakari
-type: library
+type: client-library
 repository-settings:
   openstack/python-masakariclient: {}
