--- a/deliverables/rocky/tripleo-common.yaml
+++ b/deliverables/rocky/tripleo-common.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 33de4303bbb95d3964f8b511a2031ec4c3c01ed6
         repo: openstack/tripleo-common
     version: 9.0.0
+  - projects:
+      - hash: 4de70a5314e58bd543c732a2e80a5ebbe353ef79
+        repo: openstack/tripleo-common
+    version: 9.0.1
