TripleO queens release
Change-Id: I29a01c06d876b41b1014642ada0d4a366cc34d4b

--- a/deliverables/queens/instack-undercloud.yaml
+++ b/deliverables/queens/instack-undercloud.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: e3142ba2860c7b1c76146f331679a6bf4879a1d1
         repo: openstack/instack-undercloud
     version: 8.4.0
+  - projects:
+      - hash: 6bcc660e3a6a4a4febf9b0d1c3e10307a2734833
+        repo: openstack/instack-undercloud
+    version: 8.4.1
 repository-settings:
   openstack/instack-undercloud: {}
 branches:
