--- a/deliverables/queens/os-net-config.yaml
+++ b/deliverables/queens/os-net-config.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: e699c687aaed82b4750d5a8b9fe5e033f846e102
         repo: openstack/os-net-config
     version: 8.4.0
+  - projects:
+      - hash: 08a0f081bf627ef09b934b2cc1dc66e172a1dbd4
+        repo: openstack/os-net-config
+    version: 8.4.1
 repository-settings:
   openstack/os-net-config: {}
 branches:
