--- a/deliverables/queens/puppet-tripleo.yaml
+++ b/deliverables/queens/puppet-tripleo.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: 0e61fab9cdaaee67a15c4cd105689402a837f37a
         repo: openstack/puppet-tripleo
     version: 8.3.1
+  - projects:
+      - hash: 37e6df17c00c0311701829e52803f7fab1e2f6be
+        repo: openstack/puppet-tripleo
+    version: 8.3.2
 repository-settings:
   openstack/puppet-tripleo: {}
 branches:
