--- a/deliverables/queens/python-tripleoclient.yaml
+++ b/deliverables/queens/python-tripleoclient.yaml
@@ -28,6 +28,10 @@ releases:
       - hash: 47f6550ce3129f873a2747c2f8fc3e0074f2042f
         repo: openstack/python-tripleoclient
     version: 9.2.0
+  - projects:
+      - hash: d6f2872ef70f8aeab7740f3c1252cd16d4c0d3ea
+        repo: openstack/python-tripleoclient
+    version: 9.2.1
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/queens.html
 repository-settings:
   openstack/python-tripleoclient: {}
