--- a/deliverables/queens/tripleo-heat-templates.yaml
+++ b/deliverables/queens/tripleo-heat-templates.yaml
@@ -34,6 +34,10 @@ releases:
       - hash: 48a4e12565ee0e65e29d8576e2a1ffc1359e8483
         repo: openstack/tripleo-heat-templates
     version: 8.0.1
+  - projects:
+      - hash: 7235d2a58d7e58d22af4a93261f5aa96e71cf241
+        repo: openstack/tripleo-heat-templates
+    version: 8.0.2
 repository-settings:
   openstack/tripleo-heat-templates: {}
 branches:
