--- a/deliverables/queens/tripleo-image-elements.yaml
+++ b/deliverables/queens/tripleo-image-elements.yaml
@@ -26,6 +26,10 @@ releases:
       - hash: e427c9086ca7a98de9980205e5bfdbe1f5d096fc
         repo: openstack/tripleo-image-elements
     version: 8.0.0
+  - projects:
+      - hash: 95945ef3db6b3d191ad5dcf240e9392eb7d5fc04
+        repo: openstack/tripleo-image-elements
+    version: 8.0.1
 repository-settings:
   openstack/tripleo-image-elements: {}
 branches:
