--- a/deliverables/queens/tripleo-validations.yaml
+++ b/deliverables/queens/tripleo-validations.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: 0744e1b801300d962ea5d8524edf6357442cd3d7
         repo: openstack/tripleo-validations
     version: 8.4.0
+  - projects:
+      - hash: d93fb6357f3db5f571f8c4b81405083d96c685b8
+        repo: openstack/tripleo-validations
+    version: 8.4.1
 repository-settings:
   openstack/tripleo-validations: {}
 branches:
