TripleO pike release
Change-Id: Iabaa7d82f42a52cd56c31a84408ca6a3cb532de3

--- a/deliverables/pike/os-net-config.yaml
+++ b/deliverables/pike/os-net-config.yaml
@@ -42,6 +42,10 @@ releases:
       - hash: 4a59e793455feea8c8d807911e2dbdc2923a248f
         repo: openstack/os-net-config
     version: 7.3.4
+  - projects:
+      - hash: 137abf0138f538d79b79c4aefef03e290cba808e
+        repo: openstack/os-net-config
+    version: 7.3.5
 team: tripleo
 type: other
 repository-settings:
