--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -69,6 +69,10 @@ releases:
       - hash: b87c69281b0e1e8983a49e93bfcc3231bab8e4b3
         repo: openstack/puppet-tripleo
     version: 7.4.11
+  - projects:
+      - hash: 176ce286c7740de4c3a5858df84fcb33a21eb36f
+        repo: openstack/puppet-tripleo
+    version: 7.4.12
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/puppet-tripleo/pike.html
