--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -58,6 +58,10 @@ releases:
       - hash: 76fd6d2b23effdc202283ba5cbfb8e2764897ddb
         repo: openstack/python-tripleoclient
     version: 7.3.9
+  - projects:
+      - hash: 158bcb2cd297d9f6e02bd033857d248d4fe2ab38
+        repo: openstack/python-tripleoclient
+    version: 7.3.10
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
