--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -82,6 +82,10 @@ releases:
       - hash: d044d1e8c49a12d6f6d38ba34dd872a6c39e7294
         repo: openstack/tripleo-common
     version: 7.6.11
+  - projects:
+      - hash: 78a572b0c897e98029bc1fcec8195925fb7c8f5d
+        repo: openstack/tripleo-common
+    version: 7.6.12
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-common/pike.html
