--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -75,6 +75,10 @@ releases:
       - hash: fb82009d62c903f92f0cf287c01b5406c5d7da37
         repo: openstack/tripleo-heat-templates
     version: 7.0.11
+  - projects:
+      - hash: 3f6e572279d66efd1081dd0ec4c39a5ef6be4a35
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.12
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-heat-templates/pike.html
