--- a/deliverables/pike/tripleo-image-elements.yaml
+++ b/deliverables/pike/tripleo-image-elements.yaml
@@ -47,6 +47,10 @@ releases:
       - hash: a0088127e91080300f62364bc168ed39f0a43452
         repo: openstack/tripleo-image-elements
     version: 7.0.4
+  - projects:
+      - hash: 122d921d8a0139acb34735b9785a4c4429cb90cc
+        repo: openstack/tripleo-image-elements
+    version: 7.0.5
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-image-elements/pike.html
