--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -58,6 +58,10 @@ releases:
       - hash: bc5452a00dfe3af1656195d1a23d2aacac707d08
         repo: openstack/tripleo-validations
     version: 7.4.8
+  - projects:
+      - hash: 11a6a9372ba2720b671e1e9ddd5ff19baa69ad06
+        repo: openstack/tripleo-validations
+    version: 7.4.9
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-validations/pike.html
