--- a/deliverables/queens/mistral.yaml
+++ b/deliverables/queens/mistral.yaml
@@ -54,6 +54,10 @@ releases:
         hash: 5f78ec5f73257d80fd8d6dd343a1e422e1d5b986
       - repo: openstack/mistral-extra
         hash: 8173e8d1b886fd58ec9ddae7ad03f76c812ac1f4
+  - projects:
+      - hash: 3e4cabce393bfe759ead6975dc29d581654ee676
+        repo: openstack/mistral
+    version: 6.0.2
 repository-settings:
   openstack/mistral: {}
   openstack/mistral-dashboard: {}
