TripleO ocata release
Change-Id: Ibee658f2b6a22a8ef7ed073efab8bbcc57dba850

--- a/deliverables/ocata/instack-undercloud.yaml
+++ b/deliverables/ocata/instack-undercloud.yaml
@@ -52,6 +52,10 @@ releases:
       - hash: a32574baa5731efab03da9a14458b944e313fd20
         repo: openstack/instack-undercloud
     version: 6.1.6
+  - projects:
+      - hash: 2849da2b6f8e3095eda2e8c7f311f8ae207a7c3c
+        repo: openstack/instack-undercloud
+    version: 6.1.7
 team: tripleo
 type: other
 repository-settings:
