--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -74,6 +74,10 @@ releases:
       - hash: ca6911ad27d464fd4b560aeb18d9d7a5fdfda4c1
         repo: openstack/puppet-tripleo
     version: 6.5.11
+  - projects:
+      - hash: 40c327a6bc38b9f7922d8292b1993e2ebec61b59
+        repo: openstack/puppet-tripleo
+    version: 6.5.12
 team: tripleo
 type: other
 repository-settings:
