--- a/deliverables/ocata/tripleo-common.yaml
+++ b/deliverables/ocata/tripleo-common.yaml
@@ -51,6 +51,10 @@ releases:
       - hash: f09efed4fdef60887a64b96291bcbbe596603066
         repo: openstack/tripleo-common
     version: 6.1.5
+  - projects:
+      - hash: da974e0208359d10bcdfc78ea7502500818b87e6
+        repo: openstack/tripleo-common
+    version: 6.1.6
 team: tripleo
 type: other
 repository-settings:
