--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -84,6 +84,10 @@ releases:
       - hash: 0069100526a2f9468d0deec5d2799476e2279c58
         repo: openstack/tripleo-heat-templates
     version: 6.2.12
+  - projects:
+      - hash: de86346b73577025e5a416dfd423e3aae2e16e41
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.13
 team: tripleo
 type: other
 repository-settings:
