TripleO newton release
Change-Id: I74ac799aee56f695dbc80fc1d23f0cd695ac985b

--- a/deliverables/newton/instack-undercloud.yaml
+++ b/deliverables/newton/instack-undercloud.yaml
@@ -79,6 +79,10 @@ releases:
       - hash: 2046b2eab1f0267163c2d8a4215e2244bf9506f6
         repo: openstack/instack-undercloud
     version: 5.3.8
+  - projects:
+      - hash: a48f3a8ed653b1c307b774c868044be1c614a901
+        repo: openstack/instack-undercloud
+    version: 5.3.9
 team: tripleo
 type: other
 repository-settings:
