--- a/deliverables/newton/puppet-tripleo.yaml
+++ b/deliverables/newton/puppet-tripleo.yaml
@@ -81,6 +81,10 @@ releases:
       - hash: 7edc5a5e682ad5b4c44fa3d9361258059fe71c59
         repo: openstack/puppet-tripleo
     version: 5.6.9
+  - projects:
+      - hash: 939e0375a12afc4c07936c18b6e2b4901ff86a06
+        repo: openstack/puppet-tripleo
+    version: 5.6.10
 team: tripleo
 type: other
 repository-settings:
