--- a/deliverables/newton/tripleo-common.yaml
+++ b/deliverables/newton/tripleo-common.yaml
@@ -62,6 +62,10 @@ releases:
       - hash: 2c83efd59b72c1e87533f1ac1540de63361533f9
         repo: openstack/tripleo-common
     version: 5.4.7
+  - projects:
+      - hash: eac08f6caebefd9ac3f7c956e501a562d0f19624
+        repo: openstack/tripleo-common
+    version: 5.4.8
 team: tripleo
 type: library
 repository-settings:
