--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -91,6 +91,10 @@ releases:
       - hash: b2161d7fe8a9e26fd2f4bc1be74c1f3080cf770b
         repo: openstack/tripleo-heat-templates
     version: 5.3.11
+  - projects:
+      - hash: 361f20ebda91f1ee34671e83f156aba466fbaa27
+        repo: openstack/tripleo-heat-templates
+    version: 5.3.12
 team: tripleo
 type: other
 repository-settings:
