--- a/deliverables/queens/panko.yaml
+++ b/deliverables/queens/panko.yaml
@@ -9,6 +9,10 @@ releases:
     projects:
       - repo: openstack/panko
         hash: 849a579b3a8c88da722be2a7b46514b8c0115ee8
+  - version: 4.0.1
+    projects:
+      - repo: openstack/panko
+        hash: 7d27099363cafc102f092a3511c3c7f37e3e664f
 repository-settings:
   openstack/panko: {}
 branches:
