Oslo releases for 2018-4-23
Change-Id: I30f2b305980b4fa9eaa85a343d1a0dd3dfc012ad

--- a/deliverables/rocky/futurist.yaml
+++ b/deliverables/rocky/futurist.yaml
@@ -6,3 +6,8 @@ team: oslo
 type: library
 repository-settings:
   openstack/futurist: {}
+releases:
+  - projects:
+      - hash: 936a5d5f13a0c01bb45629aadbf4cd83013932e2
+        repo: openstack/futurist
+    version: 1.7.0
