--- a/deliverables/rocky/oslo.config.yaml
+++ b/deliverables/rocky/oslo.config.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 84655714b656c8296bfd70aeb5daf5996e1f5add
         repo: openstack/oslo.config
     version: 6.1.0
+  - projects:
+      - hash: 10caf02237933aa7c308f5e688b58920e409cf96
+        repo: openstack/oslo.config
+    version: 6.2.0
