--- a/deliverables/rocky/oslo.db.yaml
+++ b/deliverables/rocky/oslo.db.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: 2b2514603f5cb721e922f639e73a5ed75bb0c12b
         repo: openstack/oslo.db
     version: 4.36.0
+  - projects:
+      - hash: 2a5251c52da41ae262983a09020a7fd951976fa3
+        repo: openstack/oslo.db
+    version: 4.37.0
