--- a/deliverables/rocky/oslo.privsep.yaml
+++ b/deliverables/rocky/oslo.privsep.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 77c463a48305f6ce39e4e495d95d48899ea03f96
         repo: openstack/oslo.privsep
     version: 1.28.0
+  - projects:
+      - hash: d510207740f59345db9a46c3b64bc078148e869a
+        repo: openstack/oslo.privsep
+    version: 1.29.0
