--- a/deliverables/rocky/oslo.utils.yaml
+++ b/deliverables/rocky/oslo.utils.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: fc9dc7d5c20059b3b9ee318a6643e117cbc5f195
         repo: openstack/oslo.utils
     version: 3.36.0
+  - projects:
+      - hash: 8d9d958c430db88dff2d364ccff49c39c0d1048a
+        repo: openstack/oslo.utils
+    version: 3.36.1
