nova: release ocata 15.1.1
Depends-On: https://review.openstack.org/561613

Change-Id: I78f48e50bb2680f305e1e2297b08aa00dd76ce63

--- a/deliverables/ocata/nova.yaml
+++ b/deliverables/ocata/nova.yaml
@@ -69,5 +69,9 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 4f0ff43c79c02689a118dc8100187c19b5c21238
+  - projects:
+      - hash: cec7a9bc91aae9a2e074802cc4443b6db44efa6d
+        repo: openstack/nova
+    version: 15.1.1
 repository-settings:
   openstack/nova: {}
